# projects_OpenGL

./: CMakeLists.txt  Camera.h  README.md  model.h  shader.h
3d_model/: 3d_model.cpp  CMakeLists.txt  Source.cpp  description.txt  model_loading_1.txt  model_loading_2.txt
3d_model/proto/: model_loading_1.txt  model_loading_2.txt
3d_model/proto/models/girl/: license.txt  scene.gltf
3d_object/: 3d_object.cpp  CMakeLists.txt
3d_object/proto/: fragment.cpp
adaptive_light/: CMakeLists.txt  adaptive_light.cpp
adaptive_light/proto/: fragment.cpp  lampFragment.cpp
camera/: CMakeLists.txt  camera.cpp
camera/proto/: fragment.txt  vertex.txt
changecolor/: CMakeLists.txt  changecolor.cpp
changecolor/proto/: fragment.txt  vertex.txt
color/: CMakeLists.txt  color.cpp
color/proto/: fragment.txt  vertex.txt
first3d/: CMakeLists.txt  first3d.cpp
light/: description.txt  fragment.cpp  lab_2.cpp  lampFragment.cpp  vertex.cpp
light_source/: CMakeLists.txt  light_source.cpp
light_source/proto/: fragment.txt
many_light_source/: CMakeLists.txt  many_light.cpp
many_light_source/proto/: fragment.txt  vertex.txt
materials/: CMakeLists.txt  material.cpp
materials/proto/: fragment.txt
shaders/: CMakeLists.txt  gradient.cpp
shaders/proto/: fragment.txt  vertex.txt
texture_color/: CMakeLists.txt  texture_color.cpp
texture_color/proto/: fragment.txt
texture_triangle/: CMakeLists.txt  texture_triangle.cpp
transform/: CMakeLists.txt  transform.cpp
transform/proto/: vertex.txt
utils/: CMakeLists.txt  camera.h  mesh.h  model.h  shader.h
